--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
             </div>
         </nav>
     </header>
-    <main></main>
+    <main class="main">
+        <section class="home section" id="home">
+            <h1>this is a test</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius possimus, facere odit sit qui nulla aliquam ab culpa blanditiis laudantium repudiandae amet earum tenetur aperiam. Labore id reiciendis atque at.</p>
+        </section>
+
+    </main>
     <footer></footer>
 
     <script src="js/app.js"></script>
