--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
             </div>
           </div>
           <div class="qualification__sections">
-            <div class="qualification__content">
+            <div class="qualification__content qualification__active" data-content id="education">
               <div class="qualification__data">
                 <div>
                   <h3 class="qualification__title">Meta Frontend Developer</h3>
@@ -411,7 +411,7 @@
                 <div></div>
                 <div>
                   <span class="qualification__rounder"></span>
-                  <span class="qualification__line"></span>
+                  <!-- <span class="qualification__line"></span> -->
                 </div>
                 <div>
                   <h3 class="qualification__title">Information Technology</h3>
@@ -423,7 +423,7 @@
                 </div>
               </div>
             </div>
-            <div class="qualification__content">
+            <div class="qualification__content" data-content id="work">
               <div class="qualification__data">
                 <div>
                   <h3 class="qualification__title">Frontend Web Developer</h3>
@@ -477,7 +477,7 @@
                 <div></div>
                 <div>
                   <span class="qualification__rounder"></span>
-                  <span class="qualification__line"></span>
+                  <!-- <span class="qualification__line"></span> -->
                 </div>
                 <div>
                   <h3 class="qualification__title">Database Manager</h3>
