--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                 <!-- skills 3 -->
                 <div class="skills__content skills__close">
                     <div class="skills__header">
-                        <i class="uil uil-database skills__icon"></i>
+                      <i class="uil uil-palette skills__icon"></i>
                         <div>
                             <h1 class="skills__title">Designer</h1>
                             <span class="skills__subtitle">More than 3 years</span>
@@ -361,7 +361,7 @@
 
           <div class="qualification sections">
             <!-- qly content 1 -->
-            <div class="qualification__content qualification__active" data-content="true" id="education">
+            <div class="qualification__content qualification__active" data-content id="education">
               <!-- qly 1 -->
               <div class="qualification__data">
                 <div>
@@ -429,7 +429,7 @@
 
             <!-- qly content 2 -->
           
-            <div class="qualification__content" data-content="false" id="work">
+            <div class="qualification__content" data-content id="work">
               <!-- qly 1 -->
               <div class="qualification__data">
                 <div>
@@ -498,7 +498,53 @@
         </div>
       </section>
 
-      <!--  -->
+      <!-- Services -->
+
+      <section class="services section" id="services">
+        <h2 class="section__title">Services</h2>
+        <span class="section__subtitle">What I Offer</span>
+
+        <div class="services__container container grid">
+          <!-- services 1 -->
+          <div class="services__content">
+            <div>
+              <i class="uil uil-web-grid services__icon"></i>
+              <h3 class="services__title">Ui/Ux <b> Designer</h3>
+            </div>
+
+            <span class="button button--flex button--small button--link services__button">
+              View more
+              <i class="uil uil-arrow-right button__icon"></i>
+            </span>
+
+            <div class="services_modal">
+              <div class="services__modal-content">
+                <h4 class="services__modal-title">Ui/Ux <br> Designer</h4>
+                <i class="uil uil-times services__modal-close"></i>
+
+                <ul class="services__modal-services grid">
+                  <li class="services__modal-services">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I design user interface</p>
+                  </li>
+                  <li class="services__modal-services">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Web pages development</p>
+                  </li>
+                  <li class="services__modal-services">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Mobile apps development</p>
+                  </li>
+                  <li class="services__modal-services">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>maintaining company's theme</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
