--- a/index.html
+++ b/index.html
@@ -543,6 +543,82 @@
               </div>
             </div>
           </div>
+          <!-- services 2 -->
+          <div class="services__content">
+            <div>
+              <i class="uil uil-arrow services__icon"></i>
+              <h3 class="services__title">Frontend<b> Developer</h3>
+            </div>
+
+            <span class="button button--flex button--small button--link services__button">
+              View more
+              <i class="uil uil-arrow-right button__icon"></i>
+            </span>
+
+            <div class="services_modal">
+              <div class="services__modal-content">
+                <h4 class="services__modal-title">Frontend <br> Developer</h4>
+                <i class="uil uil-times services__modal-close"></i>
+
+                <ul class="services__modal-services grid">
+                  <li class="services__modal-services">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I design user interface</p>
+                  </li>
+                  <li class="services__modal-services">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Web pages development</p>
+                  </li>
+                  <li class="services__modal-services">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Mobile apps development</p>
+                  </li>
+                  <li class="services__modal-services">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>maintaining company's theme</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <!-- services 3 -->
+          <div class="services__content">
+            <div>
+              <i class="uil uil-pen services__icon"></i>
+              <h3 class="services__title">Brand <b> Designer</h3>
+            </div>
+
+            <span class="button button--flex button--small button--link services__button">
+              View more
+              <i class="uil uil-arrow-right button__icon"></i>
+            </span>
+
+            <div class="services_modal">
+              <div class="services__modal-content">
+                <h4 class="services__modal-title">Brand <br> Designer</h4>
+                <i class="uil uil-times services__modal-close"></i>
+
+                <ul class="services__modal-services grid">
+                  <li class="services__modal-services">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I design user interface</p>
+                  </li>
+                  <li class="services__modal-services">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Web pages development</p>
+                  </li>
+                  <li class="services__modal-services">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Mobile apps development</p>
+                  </li>
+                  <li class="services__modal-services">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>maintaining company's theme</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
