--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
           <div class="services__content">
             <div>
               <i class="uil uil-web-grid services__icon"></i>
-              <h3 class="services__title">Ui/Ux <b> Designer</h3>
+              <h3 class="services__title">Ui/Ux <br> Designer</h3>
             </div>
 
             <span class="button button--flex button--small button--link services__button">
@@ -517,25 +517,25 @@
               <i class="uil uil-arrow-right button__icon"></i>
             </span>
 
-            <div class="services_modal">
+            <div class="services__modal">
               <div class="services__modal-content">
                 <h4 class="services__modal-title">Ui/Ux <br> Designer</h4>
                 <i class="uil uil-times services__modal-close"></i>
 
                 <ul class="services__modal-services grid">
-                  <li class="services__modal-services">
+                  <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
                     <p>I design user interface</p>
                   </li>
-                  <li class="services__modal-services">
+                  <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
                     <p>Web pages development</p>
                   </li>
-                  <li class="services__modal-services">
+                  <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
                     <p>Mobile apps development</p>
                   </li>
-                  <li class="services__modal-services">
+                  <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
                     <p>maintaining company's theme</p>
                   </li>
@@ -547,7 +547,7 @@
           <div class="services__content">
             <div>
               <i class="uil uil-arrow services__icon"></i>
-              <h3 class="services__title">Frontend<b> Developer</h3>
+              <h3 class="services__title">Frontend<br> Developer</h3>
             </div>
 
             <span class="button button--flex button--small button--link services__button">
@@ -555,25 +555,25 @@
               <i class="uil uil-arrow-right button__icon"></i>
             </span>
 
-            <div class="services_modal">
+            <div class="services__modal">
               <div class="services__modal-content">
                 <h4 class="services__modal-title">Frontend <br> Developer</h4>
                 <i class="uil uil-times services__modal-close"></i>
 
                 <ul class="services__modal-services grid">
-                  <li class="services__modal-services">
+                  <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
                     <p>I design user interface</p>
                   </li>
-                  <li class="services__modal-services">
+                  <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
                     <p>Web pages development</p>
                   </li>
-                  <li class="services__modal-services">
+                  <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
                     <p>Mobile apps development</p>
                   </li>
-                  <li class="services__modal-services">
+                  <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
                     <p>maintaining company's theme</p>
                   </li>
@@ -585,7 +585,7 @@
           <div class="services__content">
             <div>
               <i class="uil uil-pen services__icon"></i>
-              <h3 class="services__title">Brand <b> Designer</h3>
+              <h3 class="services__title">Brand <br> Designer</h3>
             </div>
 
             <span class="button button--flex button--small button--link services__button">
@@ -593,25 +593,25 @@
               <i class="uil uil-arrow-right button__icon"></i>
             </span>
 
-            <div class="services_modal">
+            <div class="services__modal">
               <div class="services__modal-content">
                 <h4 class="services__modal-title">Brand <br> Designer</h4>
                 <i class="uil uil-times services__modal-close"></i>
 
                 <ul class="services__modal-services grid">
-                  <li class="services__modal-services">
+                  <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
                     <p>I design user interface</p>
                   </li>
-                  <li class="services__modal-services">
+                  <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
                     <p>Web pages development</p>
                   </li>
-                  <li class="services__modal-services">
+                  <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
                     <p>Mobile apps development</p>
                   </li>
-                  <li class="services__modal-services">
+                  <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
                     <p>maintaining company's theme</p>
                   </li>
