--- a/index.html
+++ b/index.html
@@ -563,19 +563,19 @@
                 <ul class="services__modal-services grid">
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>I design user interface</p>
+                    <p>I develop web pages and apps using modern technologies</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Web pages development</p>
+                    <p>Develop mobile apps</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Mobile apps development</p>
+                    <p>Publish using web hosting and app stores services</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>maintaining company's theme</p>
+                    <p>Maintain and update web pages and apps</p>
                   </li>
                 </ul>
               </div>
@@ -585,7 +585,7 @@
           <div class="services__content">
             <div>
               <i class="uil uil-pen services__icon"></i>
-              <h3 class="services__title">Brand <br> Designer</h3>
+              <h3 class="services__title">Data <br> Analytics</h3>
             </div>
 
             <span class="button button--flex button--small button--link services__button">
@@ -595,28 +595,77 @@
 
             <div class="services__modal">
               <div class="services__modal-content">
-                <h4 class="services__modal-title">Brand <br> Designer</h4>
+                <h4 class="services__modal-title">Data <br> Analytics</h4>
                 <i class="uil uil-times services__modal-close"></i>
 
                 <ul class="services__modal-services grid">
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>I design user interface</p>
+                    <p>I clean and merge data from multiple resources</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Web pages development</p>
+                    <p>Analyze data based on business objectives</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Mobile apps development</p>
+                    <p>Visualize data using Tableau and Power BI</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>maintaining company's theme</p>
+                    <p>Prepare presentations with data driven decisions</p>
                   </li>
                 </ul>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Portfolio -->
+
+      <section class="portfolio section" id="portfolio">
+        <h2 class="section__title">Portfolio</h2>
+        <span class="section__subtitle">Recent work</span>
+
+        <div class="portfolio__container container">
+          <!-- portfolio 1 -->
+          <div class="portfolio__content grid">
+            <img src="assets/portfolio1.jpg" alt="" class="portfolio__img">
+
+            <div class="portfolio__data">
+              <h3 class="portfolio__title">Modern Websites</h3>
+              <p class="portfolio__description">Interactive websites compatible with all devices types</p>
+              <a href="#" class="button button--flex button--small portfolio__button">
+                Demo
+                <i class="uil uil-arrow-right button__icon"></i>
+              </a>
+            </div>
+          </div>
+          <!-- portfolio 2 -->
+          <div class="portfolio__content grid">
+            <img src="assets/portfolio2.jpg" alt="" class="portfolio__img">
+
+            <div class="portfolio__data">
+              <h3 class="portfolio__title">Brand Design</h3>
+              <p class="portfolio__description">Interactive websites compatible with all devices types</p>
+              <a href="#" class="button button--flex button--small portfolio__button">
+                Demo
+                <i class="uil uil-arrow-right button__icon"></i>
+              </a>
+            </div>
+          </div>
+          <!-- portfolio 3 -->
+          <div class="portfolio__content grid">
+            <img src="assets/portfolio3.jpg" alt="" class="portfolio__img">
+
+            <div class="portfolio__data">
+              <h3 class="portfolio__title">Modern Websites</h3>
+              <p class="portfolio__description">Interactive websites compatible with all devices types</p>
+              <a href="#" class="button button--flex button--small portfolio__button">
+                Demo
+                <i class="uil uil-arrow-right button__icon"></i>
+              </a>
             </div>
           </div>
         </div>
