--- a/index.html
+++ b/index.html
@@ -731,10 +731,16 @@
               </div>
             </div>
           </div>
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next">
+            <i class="uil uil-angle-right swiper-portfolio-icon"></i>
+          </div>
+          <div class="swiper-button-prev">
+            <i class="uil uil-angle-left swiper-portfolio-icon"></i>
+          </div>
 
-          <div class="swiper-pagination"></div>
+          <div class="swiper-pagination">
+
+          </div>
         </div>
       </section>
     </main>
