--- a/index.html
+++ b/index.html
@@ -743,7 +743,27 @@
           </div>
         </div>
       </section>
+      <!-- Projects section -->
+      <section class="project section">
+        <div class="project__bg">
+          <div class="project__container container grid">
+            <div class="project__data">
+              <h2 class="project__title">You have a new project</h2>
+              <p class="project__description">contact me now and get 20% discount on your first project</p>
+              <a href="#contact" class="button button--flex button--white">Contact me
+                <i class="uil uil-message project__icon button__icon"></i>
+              </a>
+            </div>
+
+            <img src="assets/project.png" alt="" class="project__img">
+          </div>
+        </div>
+      </section>
     </main>
+
+    <!-- testimonial -->
+
+    
 
     <footer></footer>
     <script src="js/swiper-bundle.min.js"></script>
