--- a/index.html
+++ b/index.html
@@ -763,6 +763,94 @@
 
     <!-- testimonial -->
 
+    <section class="testimonial section">
+      <h2 class="section__title">Testimonial</h2>
+      <span class="section__subtitle">My clients reviews</span>
+
+      <div class="testimonial__container container swiper mySwiper">
+        <div class="swiper-wrapper">
+          <!-- testimonial 1 -->
+          <div class="testimonial__content swiper-slide">
+            <div class="testimonial__data">
+              <div class="testimonial__header">
+                <img src="assets/testimonial1.jpg" alt="" class="testimonial__img">
+                <div>
+                  <h3 class="testimonial__name">Sara Smith</h3>
+                  <span class="testimonial__client">Client</span> 
+                </div>
+              </div>
+
+              <div>
+                <i class="uil uil-star testimonial__icon-star"></i>
+                <i class="uil uil-star testimonial__icon-star"></i>
+                <i class="uil uil-star testimonial__icon-star"></i>
+                <i class="uil uil-star testimonial__icon-star"></i>
+                <i class="uil uil-star testimonial__icon-star"></i>
+              </div>
+            </div>
+
+            <p class="testimonial__description">
+              awesome results, he carried out my project with all possible quality and details
+              and he supports the site 24/7.
+            </p>
+          </div>
+          <!-- testimonial 2 -->
+          <div class="testimonial__content swiper-slide">
+            <div class="testimonial__data">
+              <div class="testimonial__header">
+                <img src="assets/testimonial2.jpg" alt="" class="testimonial__img">
+                <div>
+                  <h3 class="testimonial__name">John Doe</h3>
+                  <span class="testimonial__client">Client</span> 
+                </div>
+              </div>
+
+              <div>
+                <i class="uil uil-star testimonial__icon-star"></i>
+                <i class="uil uil-star testimonial__icon-star"></i>
+                <i class="uil uil-star testimonial__icon-star"></i>
+                <i class="uil uil-star testimonial__icon-star"></i>
+                <i class="uil uil-star testimonial__icon-star"></i>
+              </div>
+            </div>
+
+            <p class="testimonial__description">
+              so creative and professional, I got my website done before deadline, I highly
+              recommend him.
+            </p>
+          </div>
+          <!-- testimonial 3 -->
+          <div class="testimonial__content swiper-slide">
+            <div class="testimonial__data">
+              <div class="testimonial__header">
+                <img src="assets/testimonial3.jpg" alt="" class="testimonial__img">
+                <div>
+                  <h3 class="testimonial__name">Mark Noakes</h3>
+                  <span class="testimonial__client">Client</span> 
+                </div>
+              </div>
+
+              <div>
+                <i class="uil uil-star testimonial__icon-star"></i>
+                <i class="uil uil-star testimonial__icon-star"></i>
+                <i class="uil uil-star testimonial__icon-star"></i>
+                <i class="uil uil-star testimonial__icon-star"></i>
+                <i class="uil uil-star testimonial__icon-star"></i>
+              </div>
+            </div>
+
+            <p class="testimonial__description">
+              impressive treatment and very talented and creative, he treats his client's projects
+              like his own and delivers in no time.
+            </p>
+          </div>
+        </div>
+        <div class="swiper-pagination swiper-pagination-testimonial"></div>
+      </div>
+    </section>
+
+    <!-- contact me -->
+
     
 
     <footer></footer>
