--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
           <i class="uil uil-times nav__close" id="nav-close"></i>
         </div>
         <div class="nav__btns">
+
+          <!-- theme change buttons -->
+          <i class="uil uil-moon change-theme" id="theme-button"></i>
+
           <div class="nav__toggle" id="nav-toggle">
             <i class="uil uil-apps"></i>
           </div>
