--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
               <h1 class="home__title">Hi I'm Mazen</h1>
               <h3 class="home__subtitle">Web Developer</h3>
               <p class="home__description">
-                Highly dedicated Frontend Developer with high experience in web
-                and apps modern design
+                Highly dedicated Web Developer with high experience in modern designs
               </p>
               <a href="#contact" class="button button--flex">
                 Contact Me <i class="uil uil-message button__icon"></i>
@@ -152,8 +151,8 @@
 
           <div class="about__data">
             <p class="about__description">
-              Web developer with high experience in web and apps modern design,
-              UI / UX design and development
+              Web developer with high experience in web modern design,
+              UI/UX design and development
             </p>
 
             <div class="about__info">
@@ -203,7 +202,7 @@
               <div class="skills__header">
                 <i class="uil uil-brackets-curly skills__icon"></i>
                 <div>
-                  <h1 class="skills__title">Frontend Developer</h1>
+                  <h1 class="skills__title">Frontend</h1>
                   <span class="skills__subtitle">More than 3 years</span>
                 </div>
 
@@ -254,7 +253,7 @@
               <div class="skills__header">
                 <i class="uil uil-database skills__icon"></i>
                 <div>
-                  <h1 class="skills__title">Backend Developer</h1>
+                  <h1 class="skills__title">Backend</h1>
                   <span class="skills__subtitle">More than 10 years</span>
                 </div>
 
@@ -305,7 +304,7 @@
               <div class="skills__header">
                 <i class="uil uil-palette skills__icon"></i>
                 <div>
-                  <h1 class="skills__title">Designer</h1>
+                  <h1 class="skills__title">UI/UX</h1>
                   <span class="skills__subtitle">More than 3 years</span>
                 </div>
 
@@ -557,19 +556,19 @@
                 <ul class="services__modal-services grid">
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>I design user interface</p>
+                    <p>I create the visual elements and layout of a digital product</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Web pages development</p>
+                    <p>I build interactive prototypes for demonstration</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Mobile apps development</p>
+                    <p>I conduct user research, including surveys for tested products</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>maintaining company's theme</p>
+                    <p>I create user personas that represent different user groups</p>
                   </li>
                 </ul>
               </div>
@@ -604,20 +603,20 @@
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
                     <p>
-                      I develop web pages and apps using modern technologies
+                      I create visually appealing and user-friendly web layouts
                     </p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Develop mobile apps</p>
+                    <p>I develop develop interactive and dynamic web elements</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Publish using web hosting and app stores services</p>
+                    <p>I ensure that web content is accessible to all users</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Maintain and update web pages and apps</p>
+                    <p>I follow security best practices to protect against common web vulnerabilities</p>
                   </li>
                 </ul>
               </div>
@@ -651,19 +650,19 @@
                 <ul class="services__modal-services grid">
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>I clean and merge data from multiple resources</p>
+                    <p>Web hosting all kind of pages</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Analyze data based on business objectives</p>
+                    <p>I Design, create, and maintain databases</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Visualize data using Tableau and Power BI</p>
+                    <p>I Configure and manage web servers</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Prepare presentations with data driven decisions</p>
+                    <p>I implement security best practices</p>
                   </li>
                 </ul>
               </div>
@@ -765,14 +764,14 @@
       </section>
       <!-- testimonial -->
 
-    <section class="testimonial section">
+    <!-- <section class="testimonial section">
       <h2 class="section__title">Testimonial</h2>
       <span class="section__subtitle">My clients reviews</span>
 
       <div class="testimonial__container container swiper mySwiper">
-        <div class="swiper-wrapper">
+        <div class="swiper-wrapper"> -->
           <!-- testimonial 1 -->
-          <div class="testimonial__content swiper-slide">
+          <!-- <div class="testimonial__content swiper-slide">
             <div class="testimonial__data">
               <div class="testimonial__header">
                 <img src="assets/testimonial1.jpg" alt="" class="testimonial__img">
@@ -795,9 +794,9 @@
               awesome results, he carried out my project with all possible quality and details
               and he supports the site 24/7.
             </p>
-          </div>
+          </div> -->
           <!-- testimonial 2 -->
-          <div class="testimonial__content swiper-slide">
+          <!-- <div class="testimonial__content swiper-slide">
             <div class="testimonial__data">
               <div class="testimonial__header">
                 <img src="assets/testimonial2.jpg" alt="" class="testimonial__img">
@@ -820,9 +819,9 @@
               so creative and professional, I got my website done before deadline, I highly
               recommend him.
             </p>
-          </div>
+          </div> -->
           <!-- testimonial 3 -->
-          <div class="testimonial__content swiper-slide">
+          <!-- <div class="testimonial__content swiper-slide">
             <div class="testimonial__data">
               <div class="testimonial__header">
                 <img src="assets/testimonial3.jpg" alt="" class="testimonial__img">
@@ -849,7 +848,7 @@
         </div>
         <div class="swiper-pagination swiper-pagination-testimonial"></div>
       </div>
-    </section>
+    </section> -->
 
     <!-- contact me -->
     <section class="contact section" id="contact">
